--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,31 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+*{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #050305;
 }
 
 .container {
-  max-width: 500px;
-  margin: 50px auto;
-  background: white;
+  max-width: 420px;
+  width: 90%;
+  background: #050305;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px 5px #ffc600;
 }
 
 h1 {
-  color: #333;
+  color: #ffc600;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .search-box {
@@ -24,27 +33,29 @@ h1 {
   gap: 10px;
   justify-content: center;
   margin-bottom: 20px;
+  margin-left: 0;
 }
 
 input {
   padding: 10px;
   width: 70%;
-  border: 1px solid #ccc;
+  background: transparent;
+  font-size: 17px;
+  color: #fff;
+  border: 1px solid #575555;
   border-radius: 5px;
 }
 
-button {
+.search-box button {
   padding: 10px 15px;
-  background: #007BFF;
-  color: white;
+  background: #ffc600;
   border: none;
-  border-radius: 5px;
+  border-radius: 15px;
   cursor: pointer;
+  font-size: 17px;
+  font-weight: 500;
 }
 
-button:hover {
-  background: #0056b3;
-}
 
 #result {
   display: none;
@@ -52,25 +63,48 @@ button:hover {
   margin-top: 20px;
 }
 
+.word-class {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 10px;
+  margin-bottom: 20px;
+  color: #f5f6f7;
+  padding-bottom: 10px;
+}
+
+.word-class h2 span {
+  color: gray;
+  font-size: 17px;
+  display: block;
+}
+
 p {
-  font-size: 16px;
-  color: #333;
+  font-size: 17px;
+  color: #ffc600;
+  margin-bottom: 25px;
+  padding-left: 10px;
+  border-radius: 4px 0 0 4px;
+  border-left: 4px solid gray;
+}
+
+p span {
+  display: block;
+  font-size: 15px;
+  color: #fff;
 }
 
 .synonyms span {
-  background: #ddd;
-  padding: 5px;
-  border-radius: 5px;
-  margin-right: 5px;
+  text-decoration: underline;
   cursor: pointer;
+  margin-right: 10px;
 }
 
 #play-audio {
   display: none;
   margin-top: 10px;
-  background: #28a745;
-}
-
-#play-audio:hover {
-  background: #218838;
+  background: transparent;
+  font-size: 25px;
+  color: grey;
+  border: none;
+  outline: none;
 }
